# catkin_tools

./: .gitignore  .readthedocs.yaml  .travis.before_install.bash  .travis.before_script.bash  .travis.yml  CHANGELOG.rst  LICENSE  README.md  install_manifest.txt  requirements.txt  setup.py  stdeb.cfg  stdeb2.cfg  stdeb3.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: workflow.yml
catkin_tools/: argument_parsing.py  common.py  config.py  context.py  make_jobserver.py  metadata.py  resultspace.py  terminal_color.py  utils.py
catkin_tools/commands/: catkin.py
catkin_tools/execution/: controllers.py  events.py  executor.py  io.py  job_server.py  jobs.py  stages.py
catkin_tools/jobs/: catkin.py  cmake.py  color.py  executor.py  job.py  output.py  python.cmake  test.py  utils.py
catkin_tools/jobs/cmake/: python.cmake  python_install_dir.cmake
catkin_tools/jobs/commands/: cmake.py  command.py  make.py  ninja.py  python_command.py  system_command.py
catkin_tools/notifications/: __init__.py  impl.py
catkin_tools/runner/: __init__.py  run_unix.py  run_windows.py
catkin_tools/spaces/: build.py  devel.py  install.py  log.py  source.py
catkin_tools/verbs/: catkin_shell_verbs.bash
catkin_tools/verbs/catkin_build/: .build.py.swn  __init__.py  build.py  cli.py  color.py  common.py  context.py  executor.py  job.py  output.py  run_common.py  run_unix.py  run_windows.py  terminal_color.py
catkin_tools/verbs/catkin_clean/: __init__.py  clean.py  cli.py  color.py
catkin_tools/verbs/catkin_config/: __init__.py  cli.py
catkin_tools/verbs/catkin_create/: __init__.py  cli.py
catkin_tools/verbs/catkin_depend/: __init__.py  cli.py
catkin_tools/verbs/catkin_env/: __init__.py  cli.py
catkin_tools/verbs/catkin_fetch/: __init__.py  cli.py
catkin_tools/verbs/catkin_find/: __init__.py  cli.py
catkin_tools/verbs/catkin_init/: __init__.py  cli.py
catkin_tools/verbs/catkin_list/: __init__.py  cli.py
catkin_tools/verbs/catkin_locate/: __init__.py  cli.py
catkin_tools/verbs/catkin_profile/: __init__.py  cli.py
catkin_tools/verbs/catkin_roslint/: __init__.py  cli.py
catkin_tools/verbs/catkin_test/: __init__.py  cli.py  test.py
completion/: _catkin  catkin.bash  catkin_tools-completion.bash
docs/: Makefile  build_types.rst  catkin_build.dia  catkin_tools_execution.dia  catkin_ux_discussion.rtf  cheat_sheet.rst  check_spelling.bash  conf.py  config_summary.rst  executor_job_lifecycle.dia  history.rst  index.rst  installing.rst  make.bat  mechanics.rst  migration.rst  quick_start.rst  requirements.txt  spelling_wordlist.txt  troubleshooting.rst
docs/advanced/: catkin_shell_verbs.rst  executor_events.dia  job_executor.rst  linked_develspace.rst  profiles.rst  verb_customization.rst
docs/ci/: conf.py
docs/commands/: catkin_build.rst  catkin_list.rst
docs/development/: adding_build_types.rst  extending_the_catkin_command.rst
docs/examples/: README.md  capture  slowrecord  slowrun
docs/examples/failure_ws/: 0_init.bash  1_build_warning.bash  2_build_err.bash  all.bash
docs/examples/quickstart_ws/: 0_quickstart.bash  1_prebuild.bash  1_prebuild.bash.out  1_prebuild.out  2_postbuild.bash  2_postbuild.bash.out  2_postbuild.out  all.bash
docs/examples/ros_tutorials_ws/: 0_checkout.bash  1_init.bash  2_dry_run.bash  3_build.bash  4_build_v.bash  5_build_i.bash  6_build_partial.bash  7_build_this.bash  8_build_start_with.bash  9_build_no_deps.bash  all.bash
docs/verbs/: catkin_build.rst  catkin_clean.rst  catkin_config.rst  catkin_create.rst  catkin_env.rst  catkin_fetch.rst  catkin_find.rst  catkin_init.rst  catkin_list.rst  catkin_locate.rst  catkin_profile.rst  catkin_roslint.rst  catkin_test.rst
docs/verbs/cli/: catkin_build.txt  catkin_clean.txt  catkin_config.txt  catkin_create.txt  catkin_create_pkg.txt  catkin_env.txt  catkin_init.txt  (+10 more)
scripts/: catkin_shell_verbs.bash
tests/: README.md  test_code_format.py  utils.py  workspace_assertions.py
tests/integrated/: test_build.py  test_config.py  test_init.py
tests/integrated/resources/dep_on_vanilla/: CMakeLists.txt  package.xml
tests/integrated/resources/pkg_with_broken_gtest/: CMakeLists.txt  package.xml  test_zero.cpp
tests/system/: workspace_factory.py
tests/system/resources/catkin_pkgs/build_type_condition/: CMakeLists.txt  package.xml
tests/system/resources/catkin_pkgs/cmake_args/: CMakeLists.txt  package.xml
tests/system/resources/catkin_pkgs/cmake_err/: CMakeLists.txt  package.xml
tests/system/resources/catkin_pkgs/cmake_warning/: CMakeLists.txt  package.xml
tests/system/resources/catkin_pkgs/depend_condition/: CMakeLists.txt  package.xml
tests/system/resources/catkin_pkgs/make_warning/: CMakeLists.txt  package.xml  warn.cpp
tests/system/resources/catkin_pkgs/products_unicode/: CMakeLists.txt  main.cpp  package.xml
tests/system/resources/catkin_pkgs/products_unicode/cmake/: extras.cmake.develspace.in  extras.cmake.installspace.in
tests/system/resources/catkin_pkgs/python_tests/: CMakeLists.txt  package.xml  setup.py  test_good.py
tests/system/resources/catkin_pkgs/python_tests_err/: CMakeLists.txt  package.xml  test_bad.py
tests/system/resources/catkin_pkgs/python_tests_targets/: CMakeLists.txt  package.xml  setup.py  test_bad.py  test_good.py
tests/system/resources/cmake_pkgs/app_pkg/: CMakeLists.txt  package.xml  vanilla.cpp
tests/system/resources/cmake_pkgs/lib_pkg/: CMakeLists.txt  Config.cmake.in  package.xml  vanilla.cpp  vanilla.h
tests/system/resources/cmake_pkgs/test_pkg/: CMakeLists.txt  package.xml  test.cpp  vanilla.cpp
tests/system/resources/pkg_with_cmake_err/: CMakeLists.txt  package.xml
tests/system/resources/pkg_with_cmake_err/sub/: CMakeLists.txt
tests/system/resources/pkg_with_cmake_warning/: CMakeLists.txt  package.xml
tests/system/resources/pkg_with_make_warning/: CMakeLists.txt  main.cpp  package.xml
tests/system/resources/ros_pkgs/pkg_with_roslint/: CMakeLists.txt  package.xml
tests/unit/: ascii_text.txt  test_common.py  test_config.py  test_io.py  test_job_flag_regex.py  test_jobs.py  test_runner.py  unicode_text.txt
(+88 files in other folders)
