<?xml version="1.0"?>
<package>
  <name>pkg_with_cmake_err</name>
  <version>0.0.0</version>
  <description>This package produces a CMake error when configuring.</description>
  <maintainer email="jbohren@todo.todo">jbohren</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
