<package>
  <name>build_type_condition</name>
  <description>Package with conditional build_type element.</description>
  <version>0.1.0</version>
  <license>BSD</license>
  <maintainer email="todo@todo.todo">todo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>ament</buildtool_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
