<?xml version="1.0"?>
<package>
  <name>cmake_err</name>
  <version>0.1.0</version>
  <description>This package produces a CMake error when configuring.</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
