<?xml version="1.0"?>
<package>
  <name>make_warning</name>
  <version>0.1.0</version>
  <description>This package generats a warning in the make stage.</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
