<?xml version="1.0"?>
<package>
  <name>products_unicode</name>
  <version>0.1.0</version>
  <description>This package generates products in the make stage.</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
