<package>
  <name>python_tests_err</name>
  <version>0.1.0</version>
  <license>BSD</license>
  <maintainer email="todo@todo.com">todo</maintainer>
  <description>This package contains a unit test that should fail when run.</description>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>unittest</test_depend>
</package>

